--- a/frontend/about.html
+++ b/frontend/about.html
@@ -99,7 +99,23 @@
     </p>
   </section>
 
-  <!-- Include the footer -->
-  <div id="footer-container"></div>
+  <!-- Footer -->
+  <footer>
+    <div class="footer-container">
+      <p>&copy; 2025 Holy Spirit Prayer House |
+        <span class="english-text">All Rights Reserved</span>
+        <span class="telugu-text">అన్ని హక్కులు పరిరక్షించబడినవి</span>
+      </p>
+      <div class="social-icons">
+        <a href="https://www.youtube.com/@pastorpmoses" target="_blank" aria-label="YouTube"><img src="images/youtube.png" alt="YouTube"></a>
+        <a href="https://www.instagram.com/hsph_oduru/" target="_blank" aria-label="Instagram"><img src="images/instagram.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com/holy.jesus132" target="_blank" aria-label="Facebook"><img src="images/facebook.png" alt="Facebook"></a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- External JavaScript Files -->
+  <script src="js/chatbot.js" defer></script>
+  <script src="js/script.js" defer></script>
 </body>
 </html>
