--- a/frontend/about.html
+++ b/frontend/about.html
@@ -99,9 +99,19 @@
     </nav>
   </header>
 
+
+
+
+
+
+  
+
   <!-- About Us Section -->
-  <section class="page-content">
-    <h1>
+  <section class="hero">
+    <div class="overlay"></div>
+    <div class="hero-container">
+      <div class="hero-content">
+        <h1 class="page-title">
       <span class="english-text">About Us</span>
       <span class="telugu-text">మా గురించి</span>
     </h1>
@@ -140,6 +150,18 @@
       </span>
     </p>
   </section>
+
+
+
+
+
+
+
+
+
+
+
+  
 
   <!-- Footer -->
   <footer>
