--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,138 +9,301 @@
   <title>Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
 
+  
+  
   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet">
 
+  
+
+  
   <!-- External Stylesheets -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/founder.css">
   <link rel="stylesheet" href="css/chatbot.css">
 
-  <!-- Language Toggle Script -->
+
+  
+  
+  <!-- Updated Language Toggle Script with LocalStorage -->
   <script>
+    // Function to toggle language and save preference
     function toggleLanguage(lang) {
+      localStorage.setItem("preferredLanguage", lang);
       document.body.classList.remove("english", "telugu");
       document.body.classList.add(lang);
     }
-
-    document.addEventListener("DOMContentLoaded", function () {
+    
+    // On DOM load, check for saved language preference
+    document.addEventListener("DOMContentLoaded", function() {
       const savedLang = localStorage.getItem("preferredLanguage") || "english";
+      document.body.classList.remove("english", "telugu");
       document.body.classList.add(savedLang);
     });
   </script>
 
-  <!-- Inline Styles for Professional Look -->
-  <style>
-    body {
-      font-family: 'Noto Sans', sans-serif;
-      margin: 0;
-      background-color: #f7f7f7;
-      color: #333;
-    }
 
+  
+  
+  <!-- Inline Styles for Language Toggle -->
+  <style>
     .language-toggle {
       text-align: center;
-      padding: 16px;
-      background-color: #fff;
-      border-bottom: 1px solid #ddd;
+      padding: 20px 0;
     }
-
     .language-toggle button {
-      margin: 0 6px;
-      padding: 10px 18px;
+      margin: 0 5px;
+      padding: 8px 16px;
       font-size: 14px;
-      background-color: #004080;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      font-weight: 500;
       cursor: pointer;
+      border: none;
+      background-color: #fff;
+      font-family: 'Roboto', sans-serif;
+      color: #5f6368;
+      border-radius: 4px;
+      transition: background-color 0.3s, box-shadow 0.3s;
     }
-
     .language-toggle button:hover {
-      background-color: #003060;
+      background-color: #f8f9fa;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     }
-
-    .hero {
-      background: linear-gradient(to right, #ffffff, #e6f0ff);
-      padding: 80px 20px;
-      text-align: center;
-    }
-
-    .hero .page-title {
-      font-size: 38px;
-      color: #00264d;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-
-    .hero p {
-      font-size: 18px;
-      color: #333;
-      max-width: 700px;
-      margin: 0 auto 30px;
-    }
-
-    .cta-button {
-      display: inline-block;
-      padding: 12px 24px;
-      background-color: #004080;
-      color: #fff;
-      text-decoration: none;
-      font-size: 16px;
-      border-radius: 6px;
-      transition: background-color 0.3s ease;
-    }
-
-    .cta-button:hover {
-      background-color: #002c5a;
-    }
-
+    /* Hide alternate language spans based on body class */
     .telugu .english-text { display: none; }
     .english .telugu-text { display: none; }
   </style>
 </head>
-
 <body class="english">
-  <!-- Language Toggle Button -->
+  <!-- Language Toggle Button (Top Center) -->
   <div class="language-toggle">
     <button onclick="toggleLanguage('english')">English</button>
     <button onclick="toggleLanguage('telugu')">తెలుగు</button>
   </div>
-
+  
   <!-- Header -->
   <header id="mainHeader">
-    <!-- [Paste your header content here] -->
-  </header>
-
-  <!-- Home Content -->
-  <main id="home">
-    <section class="hero">
-      <div class="hero-container">
-        <div class="hero-content">
-          <h1 class="page-title">
-            <span class="english-text">Holy Spirit Prayer House</span>
-            <span class="telugu-text">హోలీ స్పిరిట్ ప్రార్థన మందిరం</span>
-          </h1>
-          <p>
-            <span class="english-text">Bringing Hope, Love, and Support to the Community</span>
-            <span class="telugu-text">భక్తి, ప్రేమ, మద్దతు సమాజానికి అందించడమే మా లక్ష్యం</span>
-          </p>
-          <a href="visit.html" class="cta-button">
-            <span class="english-text">Plan Your Visit</span>
-            <span class="telugu-text">మీ పర్యటన ప్లాన్ చేయండి</span>
-          </a>
-        </div>
+    <div class="header-container">
+      <div class="logo">
+        <img src="images/logo.webp" alt="Holy Spirit Prayer House Logo">
       </div>
-    </section>
-  </main>
-
+      <nav class="desktop-nav">
+        <ul class="nav-links">
+          <li><a href="index.html">
+              <span class="english-text">Home</span>
+              <span class="telugu-text">హోమ్</span>
+            </a></li>
+          <li><a href="about.html">
+              <span class="english-text">About</span>
+              <span class="telugu-text">గురించి</span>
+            </a></li>
+          <li><a href="sermons.html">
+              <span class="english-text">Sermons</span>
+              <span class="telugu-text">ప్రసంగాలు</span>
+            </a></li>
+          <li><a href="ministries.html">
+              <span class="english-text">Ministries</span>
+              <span class="telugu-text">సేవలు</span>
+            </a></li>
+          <li><a href="orphanage.html">
+              <span class="english-text">Orphanage</span>
+              <span class="telugu-text">అనాథాశ్రమం</span>
+            </a></li>
+          <li><a href="events.html">
+              <span class="english-text">Events</span>
+              <span class="telugu-text">ఈవెంట్స్</span>
+            </a></li>
+          <li><a href="contact.html">
+              <span class="english-text">Contact</span>
+              <span class="telugu-text">సంప్రదించండి</span>
+            </a></li>
+          <li><a href="volunteer.html">
+              <span class="english-text">Get Involved</span>
+              <span class="telugu-text">చేరడం</span>
+            </a></li>
+          <li><a href="donate.html" class="donate-btn">
+              <span class="english-text">Donate Now</span>
+              <span class="telugu-text">దానం చేయండి</span>
+            </a></li>
+        </ul>
+      </nav>
+      <button id="menuButton" class="mobile-menu-button" aria-label="Open Menu">☰</button>
+    </div>
+    <nav class="mobile-nav" id="mobileNav">
+      <ul class="nav-links">
+        <li><a href="index.html">
+            <span class="english-text">Home</span>
+            <span class="telugu-text">హోమ్</span>
+          </a></li>
+        <li><a href="about.html">
+            <span class="english-text">About</span>
+            <span class="telugu-text">గురించి</span>
+          </a></li>
+        <li><a href="sermons.html">
+            <span class="english-text">Sermons</span>
+            <span class="telugu-text">ప్రసంగాలు</span>
+          </a></li>
+        <li><a href="ministries.html">
+            <span class="english-text">Ministries</span>
+            <span class="telugu-text">సేవలు</span>
+          </a></li>
+        <li><a href="orphanage.html">
+            <span class="english-text">Orphanage</span>
+            <span class="telugu-text">అనాథాశ్రమం</span>
+          </a></li>
+        <li><a href="events.html">
+            <span class="english-text">Events</span>
+            <span class="telugu-text">ఈవెంట్స్</span>
+          </a></li>
+        <li><a href="contact.html">
+            <span class="english-text">Contact</span>
+            <span class="telugu-text">సంప్రదించండి</span>
+          </a></li>
+        <li><a href="volunteer.html">
+            <span class="english-text">Get Involved</span>
+            <span class="telugu-text">చేరడం</span>
+          </a></li>
+        <li><a href="donate.html" class="donate-btn">
+            <span class="english-text">Donate Now</span>
+            <span class="telugu-text">దానం చేయండి</span>
+          </a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="overlay"></div>
+    <div class="hero-container">
+      <div class="hero-content">
+        <h1 class="page-title">
+          <span class="english-text">Holy Spirit Prayer House</span>
+          <span class="telugu-text">హోలీ స్పిరిట్ ప్రార్థన మందిరం</span>
+        </h1>
+        <p>
+          <span class="english-text">Bringing Hope, Love, and Support to the Community</span>
+          <span class="telugu-text">భక్తి, ప్రేమ, మద్దతు సమాజానికి అందించడమే మా లక్ష్యం</span>
+        </p>
+        <a href="visit.html" class="cta-button">
+          <span class="english-text">Plan Your Visit</span>
+          <span class="telugu-text">మీ పర్యటన ప్లాన్ చేయండి</span>
+        </a>
+      </div>
+    </div>
+  </section>
+  
+  <!-- Information Sections -->
+  <section class="section-container">
+    <div class="section about">
+      <h2>
+        <span class="english-text">About Us</span>
+        <span class="telugu-text">మా గురించి</span>
+      </h2>
+      <p>
+        <span class="english-text">We are dedicated to spreading faith and love through our ministries.</span>
+        <span class="telugu-text">మా సేవల ద్వారా విశ్వాసాన్ని, ప్రేమను వ్యాప్తి చేయడమే మా లక్ష్యం.</span>
+      </p>
+    </div>
+    <div class="section ministries">
+      <h2>
+        <span class="english-text">Our Ministries</span>
+        <span class="telugu-text">మా సేవలు</span>
+      </h2>
+      <p>
+        <span class="english-text">Serving the community through prayer, outreach, and support.</span>
+        <span class="telugu-text">ప్రార్థన, సేవా కార్యక్రమాల ద్వారా సమాజానికి సహాయం అందిస్తున్నాం.</span>
+      </p>
+    </div>
+    <div class="section donate">
+      <h2>
+        <span class="english-text">Support Our Mission</span>
+        <span class="telugu-text">మా సేవలను మద్దతివ్వండి</span>
+      </h2>
+      <p>
+        <span class="english-text">Your donations help us continue our work in serving the needy.</span>
+        <span class="telugu-text">మీ విరాళాలు మేము అవసరమైన వారికి సహాయం చేసేందుకు ఉపయోగపడతాయి.</span>
+      </p>
+      <a href="donate.html" class="cta-button">
+        <span class="english-text">Donate Now</span>
+        <span class="telugu-text">దానం చేయండి</span>
+      </a>
+    </div>
+  </section>
+  
+  <!-- Founders Section -->
+  <section class="founders-section">
+    <div class="founder-container">
+      <!-- Founder -->
+      <div class="founder">
+        <img src="images/founder.jpg" alt="Founder Image" class="founder-img">
+        <h2>
+          <span class="english-text">Founder</span>
+          <span class="telugu-text">స్థాపకుడు</span>
+        </h2>
+        <h3>
+          <span class="english-text">Pastor P. Moses</span>
+          <span class="telugu-text">పాస్టర్ పి. మోసెస్</span>
+        </h3>
+      </div>
+      <!-- Co-Founder -->
+      <div class="co-founder">
+        <img src="images/co-founder.jpg" alt="Co-Founder Image" class="founder-img">
+        <h2>
+          <span class="english-text">Co-Founder</span>
+          <span class="telugu-text">సహ-స్థాపకుడు</span>
+        </h2>
+        <h3>
+          <span class="english-text">Bro. Billygraham Moses</span>
+          <span class="telugu-text">బ్రదర్ బిలీగ్రాహం మోసెస్</span>
+        </h3>
+      </div>
+    </div>
+  </section>
+  
+  <!-- Floating Chatbot Button -->
+  <button id="chatbot-toggle" class="chatbot-button" aria-label="Open Chatbot">
+    <div class="chatbot-wrapper">
+      <img src="images/founder.jpg" alt="Chat with Amma">
+      <span>
+        <span class="english-text">Talk with Amma</span>
+        <span class="telugu-text">అమ్మతో చాట్ చేయండి</span>
+      </span>
+    </div>
+  </button>
+  
+  <!-- Chatbot Popup -->
+  <div id="chatbot-popup" class="chatbot-popup hidden">
+    <div class="chatbot-header">
+      <span>
+        <span class="english-text">Chat with Amma</span>
+        <span class="telugu-text">అమ్మతో చాట్ చేయండి</span>
+      </span>
+      <button id="close-chatbot" class="close-button">&times;</button>
+    </div>
+    <iframe src="https://talkwithamma.azurewebsites.net" width="100%" height="400"></iframe>
+  </div>
+  
   <!-- Footer -->
   <footer>
-    <!-- [Paste your footer content here] -->
+    <div class="footer-container">
+      <p>&copy; 2025 Holy Spirit Prayer House | 
+        <span class="english-text">All Rights Reserved</span>
+        <span class="telugu-text">అన్ని హక్కులు పరిరక్షించబడినవి</span>
+      </p>
+      <div class="social-icons">
+        <a href="https://www.youtube.com/@pastorpmoses" target="_blank" aria-label="YouTube">
+          <img src="images/youtube.png" alt="YouTube">
+        </a>
+        <a href="https://www.instagram.com/hsph_oduru/" target="_blank" aria-label="Instagram">
+          <img src="images/instagram.png" alt="Instagram">
+        </a>
+        <a href="https://www.facebook.com/holy.jesus132" target="_blank" aria-label="Facebook">
+          <img src="images/facebook.png" alt="Facebook">
+        </a>
+      </div>
+    </div>
   </footer>
-
+  
   <!-- External JavaScript Files -->
   <script src="js/chatbot.js" defer></script>
   <script src="js/script.js" defer></script>
