--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,39 +47,100 @@
 
   
   
-  <!-- Inline Styles for Language Toggle -->
-  <style>
-    .language-toggle {
-      text-align: center;
-      padding: 20px 0;
-    }
-    .language-toggle button {
-      margin: 0 5px;
-      padding: 8px 16px;
-      font-size: 14px;
-      cursor: pointer;
-      border: none;
-      background-color: #fff;
-      font-family: 'Roboto', sans-serif;
-      color: #5f6368;
-      border-radius: 4px;
-      transition: background-color 0.3s, box-shadow 0.3s;
-    }
-    .language-toggle button:hover {
-      background-color: #f8f9fa;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-    }
-    /* Hide alternate language spans based on body class */
-    .telugu .english-text { display: none; }
-    .english .telugu-text { display: none; }
-  </style>
-</head>
-<body class="english">
-  <!-- Language Toggle Button (Top Center) -->
-  <div class="language-toggle">
-    <button onclick="toggleLanguage('english')">English</button>
-    <button onclick="toggleLanguage('telugu')">తెలుగు</button>
-  </div>
+ /* Updated language toggle button for reduced brightness */
+.language-toggle button {
+  margin: 0 5px;
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
+  border: none;
+  background-color: #dbe5ef; /* darker than #e0e7ef */
+  font-family: 'Roboto', sans-serif;
+  color: #4e5b66;
+  border-radius: 4px;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+.language-toggle button:hover {
+  background-color: #cbd8e3;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.08);
+}
+
+/* Hero section background – same color family, just less bright */
+.hero {
+  background: linear-gradient(to right, #eef4fa, #dde7f3); /* toned down brightness */
+  padding: 80px 20px;
+  text-align: center;
+}
+
+.hero .page-title {
+  color: #00304f; /* slightly deeper shade */
+}
+
+.hero p {
+  color: #444c56; /* softer gray tone */
+}
+
+/* Call-to-action buttons */
+.cta-button {
+  background-color: #00487c; /* slightly less saturated */
+  color: #fff;
+  padding: 12px 24px;
+  border-radius: 6px;
+  font-size: 16px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+.cta-button:hover {
+  background-color: #00385f;
+}
+
+/* Section containers */
+.section-container {
+  padding: 60px 20px;
+  background-color: #fafcfd; /* softer than plain white */
+  text-align: center;
+}
+
+/* Section headings and paragraphs */
+.section h2 {
+  font-size: 28px;
+  color: #003a66;
+}
+.section p {
+  font-size: 17px;
+  max-width: 700px;
+  margin: 0 auto 20px;
+  color: #444c56;
+}
+
+/* Founders section */
+.founders-section {
+  background-color: #f4f7fa;
+  padding: 60px 20px;
+  text-align: center;
+}
+.founder-img {
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+  border-radius: 8px;
+}
+
+/* Footer */
+footer {
+  background-color: #1f1f1f;
+  color: #ccc;
+  padding: 20px 0;
+  text-align: center;
+}
+footer .social-icons img {
+  width: 30px;
+  margin: 0 10px;
+  opacity: 0.9;
+}
+
+/* Multilingual toggle */
+.telugu .english-text { display: none; }
+.english .telugu-text { display: none; }
+
 
 
 
